# com.csub.geoAR

./: README.md  build.gradle  local.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
plugins/: build.gradle
plugins/src/main/: AndroidManifest.xml
plugins/src/main/cpp/: CMakeLists.txt
plugins/src/main/cpp/include/opencv2/: cvconfig.h  opencv_modules.hpp
plugins/src/main/cpp/include/zbar/zbar/: Exception.h
plugins/src/main/cpp/src/: FrameInputPluginModule.cpp  FrameInputPluginModule.hpp  JniRegistration.cpp  jniHelper.cpp  jniHelper.h
plugins/src/main/cpp/src/barcode/: BarcodePlugin.cpp  BarcodePlugin.h  BarcodeScanner.cpp  BarcodeScanner.hpp  BarcodeScannerJavaScriptPluginModule.cpp  BarcodeScannerJavaScriptPluginModule.hpp
plugins/src/main/cpp/src/custom_camera/: OpenGLESScanningEffectRenderingPluginModule.cpp  OpenGLESScanningEffectRenderingPluginModule.hpp  YUVFrameInputPlugin.cpp  YUVFrameInputPlugin.h  YUVFrameShaderSourceObject.cpp  YUVFrameShaderSourceObject.hpp
plugins/src/main/cpp/src/face_detection/: FaceTracker.cpp  FaceTracker.hpp  FaceTrackerJavaScriptPluginModule.cpp  FaceTrackerJavaScriptPluginModule.hpp  FaceTrackerOpenGLESRenderPluginModule.cpp  FaceTrackerOpenGLESRenderPluginModule.hpp  FaceTrackerPlugin.cpp  FaceTrackerPlugin.hpp
plugins/src/main/cpp/src/face_detection/Renderables/: StrokedRectangle.cpp  StrokedRectangle.hpp
plugins/src/main/cpp/src/marker_tracking/: Marker.cpp  Marker.hpp  MarkerTrackable.cpp  MarkerTrackable.hpp  MarkerTracker.cpp  MarkerTracker.hpp  MarkerTrackerJavaScriptPluginModule.cpp  MarkerTrackerJavaScriptPluginModule.hpp  MarkerTrackerPlugin.cpp  MarkerTrackerPlugin.hpp
plugins/src/main/cpp/src/simple_input_plugin/: SimpleInputPlugin.cpp  SimpleInputPlugin.h
wikitude-sdk/: build.gradle
wikitude-sdk-samples/: build.gradle
wikitude-sdk-samples/src/main/: AndroidManifest.xml
wikitude-sdk-samples/src/main/assets/samples/: samples.json
wikitude-sdk-samples/src/main/assets/samples/10_BrowsingPois_3_LimitingRange/: index.html
wikitude-sdk-samples/src/main/assets/samples/10_BrowsingPois_3_LimitingRange/css/: poi-radar.css
wikitude-sdk-samples/src/main/assets/samples/10_BrowsingPois_3_LimitingRange/js/: limitingrange.js  marker.js
wikitude-sdk-samples/src/main/java/com/csub/geoAR/: MainActivity.java  SimpleArActivity.java  SimpleGeoArActivity.java
wikitude-sdk-samples/src/main/java/com/csub/geoAR/advanced/: ArchitectViewExtension.java  ArchitectViewExtensionActivity.java  GeoExtension.java  NativePoiDetailExtension.java  PoiDataFromApplicationModelExtension.java  SamplePoiDetailActivity.java  SaveLoadInstantTargetExtension.java  ScreenshotSaverExtension.java
wikitude-sdk-samples/src/main/java/com/csub/geoAR/advanced/plugins/: FaceDetectionPluginExtension.java  MarkerTrackingPluginExtension.java  QrPluginExtension.java
wikitude-sdk-samples/src/main/java/com/csub/geoAR/fragments/: SimpleArFragment.java  SimpleGeoArFragment.java  UrlLauncherActivity.java
wikitude-sdk-samples/src/main/java/com/csub/geoAR/util/: DefaultConfigs.java  PermissionUtil.java  SampleCategory.java  SampleData.java  SampleJsonParser.java
wikitude-sdk-samples/src/main/java/com/csub/geoAR/util/adapters/: SamplesExpendableListAdapter.java  UrlLauncherStorageListAdapter.java
wikitude-sdk-samples/src/main/java/com/csub/geoAR/util/location/: LocationProvider.java
wikitude-sdk-samples/src/main/java/com/csub/geoAR/util/urllauncher/: UrlLauncherSettingsActivity.java  UrlLauncherStorageActivity.java
wikitude-sdk-samples/src/main/res/layout/: activity_url_launcher.xml  activity_url_launcher_storage.xml  url_launcher_row_settings.xml
wikitude-sdk-samples/src/main/res/menu/: main_menu.xml
wikitude-sdk-samples/src/main/res/values/: colors.xml  error_texts.xml  strings.xml  wikitude_license_key.xml
(+7 files in other folders)
